[package]
name = "runkrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libocispec = { git = "https://github.com/containers/libocispec" }
users = "0.11.0"
pretty_assertions = "1.2.1"
nix = "0.25.0"
bitflags = "1.3.2"
clap = { version = "3.2.17", features = ["derive"] }